# polymarket-arb

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MATH_ARCHITECTURE.md  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  PROJECT_STRUCTURE.md
src/: bayesian.rs  comments.rs  confidence.rs  config.rs  dashboard.rs  database.rs  detector.rs  kelly.rs  main.rs  monitor.rs  proxy.rs  risk.rs  runtime_state.rs  sanity.rs  stoikov.rs  telegram.rs  types.rs
src/feeds/: binance.rs  cryptoquant.rs  mod.rs  polymarket_live_ws.rs  tradingview.rs
src/polymarket/: client.rs  poller.rs
