[package]
name = "polymarket-arb"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "bot"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP + WebSocket
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3"
url = "2"

# Serialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Error handling
anyhow = "1"

# Config
dotenv = "0.15"
clap = { version = "4", features = ["derive"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Concurrency helpers
dashmap = "5"
tokio-retry = "0.3"
parking_lot = "0.12"

# Crypto / auth
hex = "0.4"
sha2 = "0.10"
hmac = "0.12"
base64 = "0.21"
uuid = { version = "1", features = ["v4"] }

# SQLite persistence
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }

# Terminal dashboard (TUI)
ratatui = "0.26"
crossterm = "0.27"

# Stats
statrs = "0.16"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
